# django_1

./: manage.py  pyproject.toml  test.sh
.github/workflows/: ci.yml
oz_project/: asgi.py  settings.py  urls.py  wsgi.py
tabom/apis/v1/: like_router.py
tabom/migrations/: 0002_like_unique_user_article.py
tabom/services/: like_service.py
tabom/tests/: test_article_service.py  test_like_service.py
