[tool.poetry]
name = "oz-project"
version = "0.1.0"
description = ""
authors = ["moonyu <dbwls3681@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
pymysql = "^1.1.1"
cryptography = "^43.0.1"
django-ninja = "^1.3.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.2"
django-stubs = "^5.0.4"
types-pymysql = "^1.1.0.20240524"
coverage = "^7.6.1"

[tool.black]
line-length = 120

[tool.isort]
profile = 'black'


[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = 3.12

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "manage"
ignore_errors = true

[tool.coverage.report]
fail_under = 80

[tool.coverage.run]
omit = [
  ".mypy_cache/**/*",
  "*/migrations/*",
  "*/*test*.py",
]

[tool.django-stubs]
django_settings_module = "oz_project.settings"

requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
